[package]
name = "toslib"
version = "0.1.0"
edition = "2024"

# [lib]
# name = "toslib"
# crate-type = ["cdylib", "staticlib"]

[dependencies]
binrw = "0.14.1"
byteorder = "1.5.0"
elementtree = "1.2.3"
flate2 = { version = "1.1.0", default-features = false, features = ["zlib"] }
pyo3 = { version = "0.24.0", features = ["extension-module"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
